<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    tools:context=".Alarma">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textViewNombreAlarma"
                android:layout_width="@dimen/lblWidth"
                android:layout_height="@dimen/lblHeight"
                android:gravity="center_vertical"
                android:text="@string/lblName"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNombreAlarma"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/TextViewHoraAlarma"
                android:layout_width="@dimen/lblWidth"
                android:layout_height="@dimen/lblHeight"
                android:gravity="center_vertical"
                android:text="@string/lblHoraAlarma"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextHoraAlarma"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/lblWidth"
                android:layout_height="@dimen/lblHeight"
                android:gravity="center_vertical"
                android:text="@string/lblMinutosAlarma"
                android:textSize="@dimen/stextSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextMinutosAlarma"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/btnCrearAlarma" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>