<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">


            <TextView
                android:id="@+id/textViewName"
                android:layout_width="@dimen/lblWidth"
                android:layout_height="@dimen/lblHeight"
                android:fontFamily="@font/muli_black"
                android:gravity="center_vertical"
                android:text="@string/lblName"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lblHeight"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/muli_black"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textViewPswrd"
                android:layout_width="@dimen/lblWidth"
                android:layout_height="@dimen/lblHeight"
                android:fontFamily="@font/muli_black"
                android:gravity="center_vertical"
                android:text="@string/lblPswrd"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPswrd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lblHeight"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/muli_black"
                android:inputType="textPassword"
                android:gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnLogIn"
            android:textColor="@color/blue"
            android:textColorLink="#F44336" />

        <Button
            android:id="@+id/btnModificarDatos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnCredential"
            android:textColor="@color/blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>