<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarCredenciales">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingTop="50dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textViewNuevoNombre"
                android:layout_width="140dp"
                android:layout_height="@dimen/lblHeight"
                android:gravity="center_vertical"
                android:text="@string/lblNuevoNombre"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextNuevoNombre"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lblHeight"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="140dp"
                android:layout_height="@dimen/lblHeight"
                android:gravity="center_vertical"
                android:text="@string/lblNuevaContraseña"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lblHeight"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:textColor="@color/blue"
                android:text="@string/btnGuardarCambios"
                android:textColorLink="@color/blue" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>