<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifiacarDatos">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textViewNuevoNombre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:fontFamily="@font/muli_black"
                android:gravity="center_vertical"
                android:text="@string/lblNuevoNombre"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNuevoNombre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textViewNuevaContrasenia"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:fontFamily="@font/muli_black"
                android:gravity="center_vertical"
                android:text="@string/lblNuevaContraseña"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNuevaContrasenia"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lblHeight"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGuardarCambios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:fontFamily="@font/mulish_bold"
                android:padding="10dp"
                android:text="@string/btnGuardarCambios"
                android:textColor="@color/blue"
                android:textColorLink="@color/blue" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>